--- a/flux_EmotionPuberty_R.Rmd
+++ b/flux_EmotionPuberty_R.Rmd
@@ -61,15 +61,42 @@ hormones <- read.csv(paste0(root, "data/ph_y_sal_horm.csv"))
 
 cbcl <- read.csv(paste0(root, "data/mh_p_cbcl.csv"))
 
-demo <- read.csv(paste0(root, "data/abcd_p_demo.csv"))
+demo <- read.csv(paste0(root, "data/abcd_p_demo.csv")) %>% 
+    rename("id" = "src_subject_id",
+           "wave" = "eventname",
+           "grade" = "demo_ed_v2",
+           "gender" = "demo_gender_id_v2",
+           "white" = "demo_prnt_race_a_v2___10",
+           "black" = "demo_prnt_race_a_v2___11",
+           "aina" = "demo_prnt_race_a_v2___12",
+           "an" = "demo_prnt_race_a_v2___13",
+           "nh" = "demo_prnt_race_a_v2___14",
+           "guam" = "demo_prnt_race_a_v2___15",
+           "samoan" = "demo_prnt_race_a_v2___16",
+           "pin" = "demo_prnt_race_a_v2___17",
+           "indian" = "demo_prnt_race_a_v2___18",
+           "chinese" = "demo_prnt_race_a_v2___19",
+           "filipino" = "demo_prnt_race_a_v2___20",
+           "japanese" = "demo_prnt_race_a_v2___21",
+           "korean" = "demo_prnt_race_a_v2___22",
+           "vietnamese" = "demo_prnt_race_a_v2___23",
+           "asian_other" = "demo_prnt_race_a_v2___24",
+           "other" = "demo_prnt_race_a_v2___25",
+           "refuse_race" = "demo_prnt_race_a_v2___77",
+           "dont_know_race" = "demo_prnt_race_a_v2___99",
+           "ethn" = "demo_ethn_v2",
+           "ethn_specified" = "demo_ethn2_v2",
+           "income" = "demo_prnt_income_v2_l") %>% 
+  select(id, wave, white, black, aina, an, nh, guam, samoan, pin, indian, chinese, filipino, japanese, vietnamese, asian_other, other, refuse_race, dont_know_race, ethn, ethn_specified, income)
 
 tracking <- read.csv(paste0(root, "data/abcd_y_lt.csv"))
 
 anthro <- read.csv(paste0(root, "data/ph_y_anthro.csv"))
 
-brain <- read.csv(paste0(root, "data/brain/mri_y_tfmr_nback_emovntf_aseg.csv")) %>% 
+brain_aseg <- read.csv(paste0(root, "data/brain/mri_y_tfmr_nback_emovntf_aseg.csv")) %>% 
   rename("id" = "src_subject_id",
          "wave" = "eventname")
+
 
 ```
 
@@ -127,7 +154,7 @@ calculate_time_difference <- function(time1, time2) {
 
 hormones$sample_collection_time <- calculate_time_difference(hormones$start_time, hormones$end_time)
 
-#hormones$time_to_freezer <- calculate_time_difference(hormones$end_time, hormones$freezer)
+hormones$time_to_freezer <- calculate_time_difference(hormones$end_time, hormones$freezer)
 
 calculate_minutes_since_midnight <- function(time) {
   # Convert time with colons to POSIXct object
@@ -141,8 +168,16 @@ calculate_minutes_since_midnight <- function(time) {
 
 hormones$midnight_to_start <- calculate_minutes_since_midnight(hormones$start_time)
 
+tracking$interview_date <- as.Date(tracking$interview_date, format = "%m/%d/%Y")
+
+covid_cutoff <- as.Date("03/01/2020", format = "%m/%d/%Y")
+
 tracking <- tracking %>% 
-  select(src_subject_id, eventname, site_id_l, rel_family_id, interview_age) %>% 
+  mutate(covid_date = ifelse(interview_date >= covid_cutoff, 1, 0))
+
+
+tracking <- tracking %>% 
+  select(src_subject_id, eventname, site_id_l, rel_family_id, interview_age, covid_date) %>% 
   rename("id" = "src_subject_id",
          "wave" = "eventname",
          "site_id" = "site_id_l",
@@ -190,23 +225,6 @@ count <- sum(rowSums(puberty == 999 | puberty == 777, na.rm = TRUE) > 0, na.rm =
 
 # 8163 rows contain a 999 or 777
 
-## identifying folks with matching family IDs
-
-pub_matching_family_IDs <- puberty %>% 
-  group_by(family_id) %>% 
-  filter(n_distinct(id) > 1) %>% 
-  distinct(id)
-
-ids_to_keep <- pub_matching_family_IDs %>% 
-  distinct(family_id, .keep_all = TRUE)
-
-ids_to_remove <- pub_matching_family_IDs %>% 
-  anti_join(ids_to_keep, by = "id")
-
-## randomly selecting one participant from each family 
-
-puberty <- puberty[which(!puberty$id %in% ids_to_remove$id),]
-
 # creating df for each sex, removing NAs and any rows with 999 or 777 
 
 puberty_male <- puberty[which(puberty$sex.x == 1),]
@@ -223,7 +241,10 @@ puberty_female <- puberty_female %>%
          !is.na(caffeine),
          !is.na(active),
          !is.na(midnight_to_start),
-         !is.na(site_id)) %>% 
+         !is.na(site_id),
+         !is.na(time_to_freezer),
+         !is.na(covid_date),
+         !is.na(age)) %>% 
   filter(!growth_spurt == 999,
          !growth_spurt == 777,
          !body_hair == 999,
@@ -246,7 +267,10 @@ puberty_male <- puberty_male %>%
          !is.na(caffeine),
          !is.na(active),
          !is.na(midnight_to_start),
-         !is.na(site_id)) %>% 
+         !is.na(site_id),
+         !is.na(time_to_freezer),
+         !is.na(covid_date),
+         !is.na(age)) %>% 
   filter(!growth_spurt == 999,
          !growth_spurt == 777,
          !body_hair == 999,
@@ -258,21 +282,10 @@ puberty_male <- puberty_male %>%
          !voice_deep == 999,
          !voice_deep == 777)
 
-## randomly selecting one time point for each participant 
-
-puberty_female <- puberty_female %>% 
-  group_by(id) %>% 
-  sample_n(1)
-
-## randomly selecting one time point for each participant 
-
-puberty_male <- puberty_male %>% 
-  group_by(id) %>% 
-  sample_n(1)
 
 # cleaning environment 
 
-rm(hormones, hormones_cleaned, pds, pds_cleaned, tracking, count, have_both_ids, anthro, ids_to_keep, ids_to_remove, pub_matching_family_IDs)
+rm(hormones, hormones_cleaned, pds, pds_cleaned, tracking, count, have_both_ids, anthro)
 
 ```
 
@@ -297,34 +310,253 @@ boxplot(puberty_male$sample_collection_time)
 puberty_male <- puberty_male %>% 
   filter(sample_collection_time < 200)
 
-model_f_dhea <- lmer(dhea ~ caffeine + active + sample_collection_time + midnight_to_start + (1 | site_id), data = puberty_female)
+## transform hormone data to normal and standardize all other variables 
 
-model_f_tst <- lmer(tst ~ caffeine + active + sample_collection_time + midnight_to_start + (1 | site_id), data = puberty_female)
+library("moments")
 
-model_m_dhea <- lmer(dhea ~ caffeine + active + sample_collection_time + midnight_to_start + (1 | site_id), data = puberty_male)
+## to normalize (1/x)
 
-model_m_tst <- lmer(tst ~ caffeine + active + sample_collection_time + midnight_to_start + (1 | site_id), data = puberty_male)
+skewness(puberty_female$dhea)
+skewness(puberty_female$tst)
+skewness(puberty_male$dhea)
+skewness(puberty_male$tst)
 
-puberty_female$dhea_unconfounded <- residuals(model_f_dhea)
-puberty_female$tst_unconfounded <- residuals(model_f_tst)
-puberty_male$dhea_unconfounded <- residuals(model_m_dhea)
-puberty_male$tst_unconfounded <- residuals(model_m_tst)
+puberty_female$dhea_norm <- log10(puberty_female$dhea)
+skewness(puberty_female$dhea_norm)
 
-puberty_female$"id-wave" <- paste(puberty_female$id, puberty_female$wave, sep = "-")
-puberty_male$"id-wave" <- paste(puberty_male$id, puberty_male$wave, sep = "-")
+puberty_female$tst_norm <- log10(puberty_female$tst)
+skewness(puberty_female$tst_norm)
 
-puberty_female <- puberty_female %>% 
+puberty_male$dhea_norm <- log10(puberty_male$dhea)
+skewness(puberty_male$dhea_norm)
+
+puberty_male$tst_norm <- log10(puberty_male$tst)
+skewness(puberty_male$tst_norm)
+
+hist(puberty_female$dhea_norm)
+hist(puberty_female$tst_norm)
+hist(puberty_male$dhea_norm)
+hist(puberty_male$tst_norm)
+
+vars_to_standardize <- c("growth_spurt", "body_hair", "skin_change", "breast_develop", "menarche", "age", "covid_date", "caffeine", "active", "sample_collection_time", "midnight_to_start", "time_to_freezer", "dhea_norm", "tst_norm")
+scaled_puberty_female <- puberty_female
+scaled_puberty_female[vars_to_standardize] <- scale(scaled_puberty_female[vars_to_standardize])
+
+vars_to_standardize <- c("growth_spurt", "body_hair", "skin_change", "voice_deep", "face_hair", "age", "covid_date", "caffeine", "active", "sample_collection_time", "midnight_to_start", "time_to_freezer", "dhea_norm", "tst_norm")
+scaled_puberty_male <- puberty_male
+scaled_puberty_male[vars_to_standardize] <- scale(scaled_puberty_male[vars_to_standardize])
+
+## removing confounding effects 
+
+model_f_dhea <- lmer(dhea_norm ~ caffeine +  sample_collection_time  + midnight_to_start + time_to_freezer + covid_date + (1 | site_id) + (1 | id), data = scaled_puberty_female)
+
+model_f_tst <- lmer(tst_norm ~ caffeine +  sample_collection_time + midnight_to_start +  time_to_freezer + covid_date + (1 | site_id) + (1 | id), data = scaled_puberty_female)
+
+model_m_dhea <- lmer(dhea_norm ~ caffeine + sample_collection_time  + midnight_to_start + time_to_freezer + covid_date + (1 | site_id) + (1 | id), data = scaled_puberty_male)
+
+model_m_tst <- lmer(tst_norm ~ caffeine + sample_collection_time + midnight_to_start + time_to_freezer + covid_date + (1 | site_id) + (1 | id), data = scaled_puberty_male)
+
+## adding residuals to dataframes 
+
+scaled_puberty_female$dhea_unconfounded <- residuals(model_f_dhea)
+scaled_puberty_female$tst_unconfounded <- residuals(model_f_tst)
+scaled_puberty_male$dhea_unconfounded <- residuals(model_m_dhea)
+scaled_puberty_male$tst_unconfounded <- residuals(model_m_tst)
+
+
+scaled_puberty_female$"id-wave" <- paste(scaled_puberty_female$id, scaled_puberty_female$wave, sep = "-")
+scaled_puberty_male$"id-wave" <- paste(scaled_puberty_male$id, scaled_puberty_male$wave, sep = "-")
+
+scaled_puberty_female <- scaled_puberty_female %>% 
   rename("pds" = "pds_f",
          "sex" = "sex.x") %>% 
-  select(-pds_m, -sex.y, -caffeine, -active, -start_time, -end_time, -freezer, -sample_collection_time, -midnight_to_start)
+  select(-pds_m, -sex.y, -caffeine, -active, -start_time, -end_time, -freezer, -sample_collection_time, -midnight_to_start, -covid_date, -time_to_freezer)
 
-puberty_male <- puberty_male %>% 
+scaled_puberty_male <- scaled_puberty_male %>% 
   rename("pds" = "pds_m",
          "sex" = "sex.x") %>% 
-  select(-pds_f, -sex.y, -caffeine, -active, -start_time, -end_time, -freezer, -sample_collection_time, -midnight_to_start)
+  select(-pds_f, -sex.y, -caffeine, -active, -start_time, -end_time, -freezer, -sample_collection_time, -midnight_to_start, -covid_date, -time_to_freezer)
 
-write.csv(puberty_female, file = "data/whole_abcd_puberty_female.csv")
-write.csv(puberty_male, file = "data/whole_abcd_puberty_male.csv")
+write.csv(scaled_puberty_female, file = "data/whole_abcd_puberty_female.csv")
+write.csv(scaled_puberty_male, file = "data/whole_abcd_puberty_male.csv")
+
+```
+
+# Creating typically developing dataframe fro puberty-age-gap 
+```{r creating TD dataframe for puberty-age-gap}
+
+# typically developing pxs --> anyone who scored less than 60 on the following subscales: affective problems, anxiety problems, somatic problems, ADHD, oppositional defiant problems, conduct problems 
+
+atypical <- cbcl %>% 
+  filter(!cbcl_scr_dsm5_conduct_t > 60, 
+         !cbcl_scr_dsm5_opposit_t > 60, 
+         !cbcl_scr_dsm5_adhd_t > 60,  	
+         !cbcl_scr_dsm5_somaticpr_t > 60, 
+         !cbcl_scr_dsm5_anxdisord_t > 60, 
+         !cbcl_scr_dsm5_depress_t > 60) %>% 
+  rename("id" = "src_subject_id",
+         "wave" = "eventname")
+
+typical_female <- anti_join(scaled_puberty_female, atypical, by = c("id", "wave"))
+typical_male <- anti_join(scaled_puberty_male, atypical, by = c("id", "wave"))
+
+write.csv(typical_female, file = paste0(root, "data/typical_female_all.csv"))
+
+write.csv(typical_male, file = paste0(root, "data/typical_male_all.csv"))
+
+atypical_female <- anti_join(scaled_puberty_female, typical_female, by = c("id", "wave"))
+atypical_male <- anti_join(scaled_puberty_male, typical_male, by = c("id", "wave"))
+
+write.csv(atypical_female, file = paste0(root, "data/atypical_female_all.csv"))
+write.csv(atypical_male, file = paste0(root, "data/atypical_male_all.csv"))
+
+## creating three separate subsets of typically developing folks with one time point of each id randomly and making sure there are no duplicate family IDs
+# Determine the number of subsets
+num_subsets <- 4
+
+# Create a new column to indicate subset membership
+typical_female$subset <- sample(1:num_subsets, size = nrow(typical_female), replace = TRUE)
+
+# Function to filter unique IDs and family IDs within a subset
+filter_unique_ids <- function(subset) {
+  subset_ids <- unique(c(subset$id, subset$family_id))
+  subset %>% filter(id %in% subset_ids, family_id %in% subset_ids)
+}
+
+# Create filtered subsets with unique IDs and family IDs
+subset1_female <- filter_unique_ids(typical_female[typical_female$subset == 1, ])
+subset2_female <- filter_unique_ids(typical_female[typical_female$subset == 2, ])
+subset3_female <- filter_unique_ids(typical_female[typical_female$subset == 3, ])
+subset4_female <- filter_unique_ids(typical_female[typical_female$subset == 4, ])
+
+write.csv(subset1_female, file = paste0(root, "data/typical_female_1.csv"))
+write.csv(subset2_female, file = paste0(root, "data/typical_female_2.csv"))
+write.csv(subset3_female, file = paste0(root, "data/typical_female_3.csv"))
+write.csv(subset4_female, file = paste0(root, "data/typical_female_4.csv"))
+
+## in males
+
+num_subsets <- 4
+
+# Create a new column to indicate subset membership
+typical_male$subset <- sample(1:num_subsets, size = nrow(typical_male), replace = TRUE)
+
+# Function to filter unique IDs and family IDs within a subset
+filter_unique_ids <- function(subset) {
+  subset_ids <- unique(c(subset$id, subset$family_id))
+  subset %>% filter(id %in% subset_ids, family_id %in% subset_ids)
+}
+
+# Create filtered subsets with unique IDs and family IDs
+subset1_male <- filter_unique_ids(typical_male[typical_male$subset == 1, ])
+subset2_male <- filter_unique_ids(typical_male[typical_male$subset == 2, ])
+subset3_male <- filter_unique_ids(typical_male[typical_male$subset == 3, ])
+subset4_male <- filter_unique_ids(typical_male[typical_male$subset == 4, ])
+
+write.csv(subset1_male, file = paste0(root, "data/typical_male_1.csv"))
+write.csv(subset2_male, file = paste0(root, "data/typical_male_2.csv"))
+write.csv(subset3_male, file = paste0(root, "data/typical_male_3.csv"))
+write.csv(subset4_male, file = paste0(root, "data/typical_male_4.csv"))
+
+```
+
+```{r cleaning cbcl}
+
+cbcl <- cbcl %>% 
+  rename("id" = "src_subject_id",
+         "wave" = "eventname")
+
+cbcl_female <- left_join(female, cbcl, by = c("id", "wave"))
+cbcl_male <- left_join(male, cbcl, by = c("id", "wave"))
+
+cbcl_female <- cbcl_female %>% 
+  select(id, wave, cbcl_scr_syn_internal_t, cbcl_scr_dsm5_depress_t, cbcl_scr_dsm5_anxdisord_t, cbcl_scr_syn_social_t, cbcl_scr_07_stress_t, cbcl_scr_syn_totprob_t)
+
+
+cbcl_male <- cbcl_male %>% 
+  select(id, wave, cbcl_scr_syn_internal_t, cbcl_scr_dsm5_depress_t, cbcl_scr_dsm5_anxdisord_t, cbcl_scr_syn_social_t, cbcl_scr_07_stress_t, cbcl_scr_syn_totprob_t)
+
+
+```
+
+```{r troubleshooting hormone data}
+
+## linear vs growth curve models  
+
+## DHEA for females 
+
+## initial visualizations suggest growth curve modeling fits the data best for DHEA female
+
+mylinearmodel <- lmer(dhea ~ age + (1 | id), data = puberty_female, REML = FALSE)
+myexponentialmodel <- lmer(log(dhea) ~ age + (1 | id), data = puberty_female, REML = FALSE)
+
+## comparing R squared 
+
+conditional_r2_lin <- r.squaredGLMM(myexponentialmodel, type = "conditional")
+conditional_r2_exp <- r.squaredGLMM(mylinearmodel, type = "conditional")
+
+## DHEA for males 
+
+mylinearmodel <- lmer(dhea ~ age + (1 | id), data = puberty_male, REML = FALSE)
+myexponentialmodel <- lmer(log(dhea) ~ age + (1 | id), data = puberty_male, REML = FALSE)
+
+## comparing R squared 
+
+conditional_r2_lin <- r.squaredGLMM(myexponentialmodel, type = "conditional")
+conditional_r2_exp <- r.squaredGLMM(mylinearmodel, type = "conditional")
+
+
+## tst for females 
+
+mylinearmodel <- lmer(tst ~ age + (1 | id), data = puberty_female, REML = FALSE)
+myexponentialmodel <- lmer(log(tst) ~ age + (1 | id), data = puberty_female, REML = FALSE)
+
+## comparing R squared 
+
+conditional_r2_lin <- r.squaredGLMM(myexponentialmodel, type = "conditional")
+conditional_r2_exp <- r.squaredGLMM(mylinearmodel, type = "conditional")
+
+## tst for males 
+
+mylinearmodel <- lmer(tst ~ age + (1 | id), data = puberty_male, REML = FALSE)
+myexponentialmodel <- lmer(log(tst) ~ age + (1 | id), data = puberty_male, REML = FALSE)
+
+## comparing R squared 
+
+conditional_r2_lin <- r.squaredGLMM(myexponentialmodel, type = "conditional")
+conditional_r2_exp <- r.squaredGLMM(mylinearmodel, type = "conditional")
+
+
+# Calculate linear line
+trend_model <- lm(dhea ~ age, data = puberty_female)
+trend_intercept <- coef(trend_model)[1]
+trend_slope <- coef(trend_model)[2]
+
+# Define the exponential growth function
+exponential_growth <- function(x, a, b) {
+  a * exp(b * x) 
+}
+
+# Fit the model using nls
+fit <- nls(dhea ~ exponential_growth(age, a, b),
+           data = puberty_female,
+           start = c(a = 1.662, b = 0.019))
+
+# Generate predicted values using the fitted model
+predicted_values <- data.frame(age = puberty_female$age,
+                                dhea = predict(fit))
+
+# Plot longitudinal data with exponential growth curve and overall trend line using ggplot2
+ggplot(puberty_female, aes(x = age, y = dhea, color = factor(wave))) +
+  geom_line(aes(group = id)) +
+  geom_point(aes(group = id)) +
+  geom_jitter(aes(group = id)) +
+  geom_line(data = predicted_values, aes(x = age, y = dhea), color = "black", linetype = "dashed") +
+  geom_abline(intercept = trend_intercept, slope = trend_slope, color = "red", linetype = "dotted") +
+  labs(x = "age (in months)", y = "dhea") +
+  theme_minimal()
+
+
 
 ```
 
@@ -357,5 +589,72 @@ write.csv(atypical_male, file = paste0(root, "data/atypical_male.csv"))
 
 ```
 
+```{r loading in clean whole docs to generate descriptives}
 
+
+whole_female <- read.csv(paste0(root, "data/whole_abcd_puberty_female.csv"))
+whole_male <- read.csv(paste0(root, "data/whole_abcd_puberty_male.csv"))
+
+## clean demo data 
+
+demo <- demo %>% 
+  filter(!is.na(white))
+
+## sex from puberty data, age, race
+
+whole <- full_join(whole_female, whole_male)
+demo_ids <- left_join(whole, demo, by = "id") %>% 
+  filter(!is.na(white),
+         !is.na(black),
+         !is.na(aina),
+         !is.na(an),
+         !is.na(nh),
+         !is.na(guam),
+         !is.na(samoan), 
+         !is.na(pin),
+         !is.na(indian),
+         !is.na(chinese),
+         !is.na(filipino),
+         !is.na(japanese),
+         !is.na(vietnamese),
+         !is.na(asian_other),
+         !is.na(other),
+         !is.na(refuse_race),
+         !is.na(dont_know_race))
+
+race_columns <- c(23:39)
+
+count_race <- colSums(demo_ids[race_columns] == 1)
+
+print(count_race)
+
+## how many people report more than one race 
+
+num_rows_mult_race <- rowSums(demo_ids[race_columns] == 1) > 1
+
+print(num_rows_mult_race)
+
+multi_race <- demo_ids[num_rows_mult_race, ]
+
+multi_race <- multi_race[,c(2, 23:39)]
+
+multi_race <- multi_race %>% 
+  pivot_longer(cols = 2:18, names_to = "race", values_to = "yes_no") %>% 
+  filter(yes_no == 1)
+
+multi_race_together <- multi_race %>% 
+  group_by(id) %>% 
+  summarize(race_joined = paste(race, collapse = "_"))
+
+multi_race_together$yes_no <- 1
+
+multi_race_together <- multi_race_together %>% 
+  pivot_wider(names_from = race_joined, values_from = yes_no) %>% 
+  mutate(across(everything(), ~ ifelse(is.na(.), 0, .)))
+
+single_race <- demo_ids[!num_rows_mult_race, ]
+
+
+
+```
 
